...
                                  SubmitFormData(title: title, body: body),
                                );
                          }
                        },
                  child: state is form_state.FormLoading
                      ? const CircularProgressIndicator()
                      : const Text("Submit"),
                );
              },
            ),
          ],
        ),
      ),
...
